--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_function"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ufo.bannerview.FunctionActivity">
+    tools:context="com.ufo.bannerview.RefreshDataActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refreshLayout"
